# wfc-extension

./: .clangd  .gitmodules  CMakeLists.txt  LICENSE  README.md  wfc.c  wfc.h
.github/workflows/: windows.yml
assets/: tilemap_battle.toml
assets/wfc-tilesets/: Circles.xml
examples/graph/: main.cpp  wfc.c
examples/regions/: main.cpp  tileset.hpp  wfc.c
examples/sudoku/: main.c  wfc.c
examples/wfc/: main.cpp  ui.h
examples/wfc_overlap/: main.cpp  wfc.c
src/: wfc_heuristic_v2.h
